--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
           await liff.init({ liffId: "2007694269-P5MJkAJ7" });
 
           let userId = "";
-           if (!liff.isLoggedIn()) {
-            liff.login(); // 強制登入
-            return; // 等登入完會自動 reload 再執行
+          if (liff.isLoggedIn()) {
+            const profile = await liff.getProfile();
+            userId = profile.userId;
           }
-           const profile = await liff.getProfile();
-           const userId = profile.userId;
-
           //表單連結，1129681516是填lineid的表格id，有變動也要改
           const formBase = "https://docs.google.com/forms/d/e/1FAIpQLScyXpHBJUq9tCDgkf5xc-ajcEdiZKeQWfIQRXoBZsAkErLMWw/viewform";
           const entryParam = "entry.400083529=" + encodeURIComponent(userId);
