--- a/nextWeek.html
+++ b/nextWeek.html
@@ -13,7 +13,7 @@
   async function main() {
     try {
       document.getElementById("status").innerText = "初始化中...";
-      await liff.init({ liffId: "2007694269-P5MJkAJ7" });
+      await liff.init({ liffId: "2007694269-JZd3P23n" });
 
       // ✅ 沒登入就強制登入（登入完會 reload）
       if (!liff.isLoggedIn()) {
